.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconppdist__c.object
<CustomObject>
    <description>soconppdist__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconppdist_soconpp__r.rstk__externalid__c&amp; &apos;_&apos; &amp;rstk__soconppdist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soconppdist_salesacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconppdist_amount__c</fullName>
        <inlineHelpText>The amount being distributed to the given Sub Ledger Sales (Revenue) Account.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconppdist_comments__c</fullName>
        <inlineHelpText>User-defined comments, up to 255 characters in length.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__soconppdist_pct__c</fullName>
        <inlineHelpText>The percentage of the total amount of the given Contract Product for Purchase charge being distributed to the Sub Ledger Sales (Revenue) Account defined.</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soconppdist_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Sub Ledger Account to which the given distributed amount will be debited.</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Contract Purchase Prod Acct Distribution</relationshipLabel>
        <relationshipName>soconppdists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soconppdist_soconpp__c</fullName>
        <inlineHelpText>The Contract Product for Purchase Detail record that this distribution applies.</inlineHelpText>
        <label>Contract Purchase Product Line</label>
        <referenceTo>rstk__soconpp__c</referenceTo>
        <relationshipLabel>Sales Account Distribution</relationshipLabel>
        <relationshipName>soconppdists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Purchase Prod Acct Distribution</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Purchase_Prod_Acct_Distribution</fullName>
        <columns>NAME</columns>
        <columns>rstk__soconppdist_soconpp__c</columns>
        <columns>rstk__soconppdist_salesacct__c</columns>
        <columns>rstk__soconppdist_pct__c</columns>
        <columns>rstk__soconppdist_amount__c</columns>
        <columns>rstk__soconppdist_comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Purchase Prod Acct Distribution</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Purchase Product Account Distri</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Purchase Prod Acct Distribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Amount</fullName>
        <active>true</active>
        <description>Amount cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK(rstk__soconppdist_amount__c ) &amp;&amp; rstk__soconppdist_amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Amount cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Amount_Percentage</fullName>
        <active>true</active>
        <description>The Amount and Percentage fields are related – one or the other or both must be specified.</description>
        <errorConditionFormula>ISBLANK( rstk__soconppdist_amount__c ) &amp;&amp;  ISBLANK( rstk__soconppdist_pct__c )</errorConditionFormula>
        <errorMessage>The Amount and Percentage fields are related – one or the other or both must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Percentage</fullName>
        <active>true</active>
        <description>Percentage cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK( rstk__soconppdist_pct__c ) &amp;&amp; rstk__soconppdist_pct__c &lt; 0</errorConditionFormula>
        <errorMessage>Percentage cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Account</fullName>
        <active>true</active>
        <description>Sales Account is Required ,not modifiable and should belong to Product Division.</description>
        <errorConditionFormula>ISBLANK(rstk__soconppdist_salesacct__c) || (! ISNEW() &amp;&amp;  ISCHANGED(rstk__soconppdist_salesacct__c) )|| ( rstk__soconppdist_salesacct__r.rstk__syacc_div__c &lt;&gt;  rstk__soconppdist_soconpp__r.rstk__soconpp_soprod__r.rstk__soprod_div__c) ||(  TEXT(rstk__soconppdist_salesacct__r.rstk__syacc_gltype_pl__c) &lt;&gt; &apos;Revenue&apos;  )</errorConditionFormula>
        <errorMessage>Sales Account is Required and not modifiable and should belong to Product Division.</errorMessage>
    </validationRules>
</CustomObject>